--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
