--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
