--- a/resources/frontend/package.json
+++ b/resources/frontend/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "dayjs": "^1.11.19",
+    "debounce": "^3.0.0",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
